Add ETAS to the company list
This pull requests adds ETAS to the company list

--- a/osci/preprocess/match_company/company_domain_match_list.yaml
+++ b/osci/preprocess/match_company/company_domain_match_list.yaml
@@ -249,6 +249,11 @@
     - bootlin.com
   industry: Technology
   regex:
+- company: ETAS
+  domains:
+    - etas.com
+  industry: Automotive
+  regex:
 - company: Bosch
   domains:
     - bosch.com
